Changelog of flooding
===================================================


1.3 (unreleased)
----------------
- Tasks to do after update:
    bin/django dbshell
        drop table lizard_flooding_worker_tasktype CASCADE;
        drop table lizard_flooding_worker_workflow CASCADE;
        drop table lizard_flooding_worker_workflowtask CASCADE;
        drop table lizard_flooding_worker_logging CASCADE;
        drop table lizard_flooding_worker_workflowtemplate CASCADE;
        drop table lizard_flooding_worker_workflowtemplatetask CASCADE;
    bin/django shell
        from south.models import *
        MigrationHistory.objects.filter(app_name='lizard_flooding_worker').delete()
    bin/django migrate flooding_worker
    bin/django loaddata flooding_worker

- Updated floding-worker to 0.6.2:
    - Replaced dependency floding_worker.Workflow to flooding_lib.Scenario.
    - Created a new initial migrationschema.
    - Removed brokerconfig.py

- Updated flooding-lib to 1.35:
    - Add breadcrumbs to add files screen in import (#3687)
    - Make WAITING the default state for new ImportScenarios (#3685)
    - Large scale code formatting (pep8/pyflakes), down to 0 errors
      from ~2300
    - Refactor and test import code some more (move functionality from
      views into models)
    - Fixed import of PIL.Image.

- Updated flooding.settings due import error of PIL.Image


1.2 (2012-06-15)
----------------

- Changed to flooding-base, flooding-lib and flooding-worker, on Git.

- Required new versions of the libraries, because of all the name changes.

- Added flooding/localsettings.py to .gitignore.

1.1.7 (2012-05-16)
------------------

- Nothing changed yet.


1.1.6 (2012-05-10)
------------------

- Increased lizard-flooding version.


1.1.5 (2012-05-04)
------------------

- Changed configuration for Nginx so that it can download files from
  /mnt/flooding, internal only (using X-Accelerated-Redirect).


1.1.4 (2012-04-24)
------------------

- Nothing changed yet.

